--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Junle Chen(陈俊乐)"
-  pronouns         : "he"
-  # bio              : "Short biography for the left-hand sidebar"
-  location         : "China"
+  # pronouns         : "he"
+  bio              : "Fourth-year student at HIT. Incoming PhD student at HKUST"
+  location         : "Harbin, China"
   # employer         : "Red Brick University"
   # uri              : # URL
-  # email            : "none@example.org" 
+  email            : "cshanppy@gmail.com" 
 
   # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
