--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "junle-chen/junle-chen.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "hanppy.png"
   name             : "Junle Chen(陈俊乐)"
   # pronouns         : "he"
   bio              : "Fourth-year student at HIT. Incoming PhD student at HKUST"
