--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,9 @@ main:
         
   - title: "Blog Posts"
     url: /year-archive/
+
+  - title: "Travel Experience"
+    url: /travel/
     
   # - title: "CV"
   #   url: /cv/
