--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Junle Chen"
 description              : &description "Fourth-year student at HIT. Incoming PhD student at HKUST"
 url                      : https://junle-chen.github.io
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "https://junle.cc/" # the subpath of your site, e.g. "/blog"
 repository               : "junle-chen/junle-chen.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
