--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Fourth-year student at HIT. Incoming PhD student at HKUST"
   location         : "Harbin, China"
   # employer         : "Red Brick University"
-  # uri              : # URL
+  uri              : "https://junle.cc/"
   email            : "cshanppy@gmail.com" 
 
   # Academic websites
