--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Junle Chen - Profile"
 title_separator          : "-"
 name                     : &name "Junle Chen"
-description              : &description "Fourth-year student at HIT. Incoming PhD student at HKUST"
+description              : &description "Incoming PhD student at HKUST"
 url                      : https://junle-chen.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "junle-chen/junle-chen.github.io"
@@ -24,11 +24,11 @@ author:
   avatar           : "hanppy.png"
   name             : "Junle Chen(陈俊乐)"
   # pronouns         : "he"
-  bio              : "Fourth-year student at HIT. Incoming PhD student at HKUST"
-  location         : "Harbin, China"
+  bio              : "Incoming PhD student at HKUST"
+  location         : "Hong Kong"
   # employer         : "Red Brick University"
   uri              : "https://junle.cc/"
-  email            : "cshanppy@gmail.com" 
+  email            : "chenjunle.cs@gmail.com" 
 
   # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
