--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Incoming PhD student at HKUST"
   location         : "Hong Kong"
   # employer         : "Red Brick University"
-  uri              : "https://junle.cc/"
+  uri              : "https://junle.site/"
   email            : "chenjunle.cs@gmail.com" 
 
   # Academic websites
